<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add.AddStoryActivity">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingHorizontal="@dimen/dimen_12dp"
            android:paddingTop="@dimen/dimen_12dp"
            android:paddingBottom="@dimen/dimen_80dp">

            <TextView
                android:id="@+id/tv_image_label"
                style="@style/H4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_image_label"
                android:textColor="@color/neutral70"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                style="@style/Widget.Material3.CardView.Elevated"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="@dimen/dimen_12dp"
                app:layout_constraintTop_toBottomOf="@id/tv_image_label"
                tools:layout_editor_absoluteX="12dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_photo_label"
                        style="@style/B3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:text="@string/add_image_description"
                        android:textColor="@color/neutral50" />

                    <ImageView
                        android:id="@+id/iv_item_photo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/dimen_8dp"
                        android:scaleType="fitCenter"
                        tools:ignore="ContentDescription"
                        tools:srcCompat="@drawable/img_welcome" />

                </FrameLayout>

            </com.google.android.material.card.MaterialCardView>

            <Button
                android:id="@+id/btn_camera"
                style="@style/B2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:text="@string/camera"
                app:layout_constraintEnd_toStartOf="@+id/btn_gallery"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

            <Button
                android:id="@+id/btn_gallery"
                style="@style/B2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery"
                app:layout_constraintBottom_toBottomOf="@+id/btn_camera"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_camera"
                app:layout_constraintTop_toTopOf="@+id/btn_camera" />

            <TextView
                android:id="@+id/tv_description_label"
                style="@style/H4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:text="@string/description"
                android:textColor="@color/neutral70"
                app:layout_constraintTop_toBottomOf="@+id/btn_camera" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_12dp"
                app:layout_constraintTop_toBottomOf="@id/tv_description_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_add_description"
                    style="@style/B2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:hint="@string/description"
                    android:imeOptions="actionDone"
                    android:inputType="textMultiLine"
                    android:minHeight="80dp"
                    tools:text="@string/lorem_ipsum" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/cb_use_location"
                android:layout_marginTop="@dimen/dimen_12dp"
                style="@style/B2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/description"
                android:text="@string/checkbox_location"
                tools:checked="true"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fl_button"
        android:background="@drawable/bg_bottom_button"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/button_add"
            style="@style/B2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_12dp"
            android:enabled="false"
            android:text="@string/upload"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/description"
            app:layout_constraintStart_toStartOf="@+id/description"
            app:layout_constraintTop_toBottomOf="@id/description" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>